# white-hacker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  install.sh  manifest  p84eqgrdnindjsjvgfvejk9kknvtubsq  ruff.toml
.claude/hooks/: append_trace.sh  capture_hooks.py  confine_patch_writes.sh  confine_self_writes.py  confine_self_writes.sh  conftest.py  gate_kb_edit.py  gate_kb_edit.sh  gate_review.sh  guard_bash.py  log_corrections.sh  log_failed_exploit.sh  pyproject.toml  save_learnings_nudge.sh
.claude/hooks/tests/: test_capture_hooks.py  test_confine_patch_writes.py  test_confine_self_writes.py  test_gate_kb_edit.py  test_gate_review.py  test_guard_bash.py
.claude/skills/_shared/scripts/: conftest.py  degradation.py  pyproject.toml  validate_findings.py
.claude/skills/sec-detect/scripts/: conftest.py  detect_tools.py  pyproject.toml  validate_scan_plan.py
.claude/skills/sec-kb-refresh/scripts/: conftest.py  pyproject.toml
.claude/skills/sec-patch/scripts/: conftest.py  pyproject.toml  validate_patch_state.py
.claude/skills/secrets-scan/scripts/: pyproject.toml  redact.py
evals/: audit-log.md  baseline.json  conftest.py  feed-state.json  keep_or_revert.py  label-schema.json  pyproject.toml  rejected.md  score.py
evals/corpus/: LOCKED  README.md  generate.py
evals/corpus/cases/cve-2025-68664-langchain-llm05/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/cve-2026-22778-vllm-ssrf/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/cve-2026-22807-vllm-deser/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/go-cmdi/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-cmdi-01/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-cmdi-02/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-cmdi-03/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-cmdi-04/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-pathtraversal/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-pathtraversal-01/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-pathtraversal-02/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-pathtraversal-03/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-pathtraversal-04/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-sqli/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-sqli-01/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-sqli-02/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-sqli-03/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-sqli-04/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-ssrf/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-ssrf-01/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-ssrf-02/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-ssrf-03/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-ssrf-04/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/go-weakrng/: benign_lookalike.go  label.json  target.md  vulnerable_variant.go
evals/corpus/cases/hard-authz-missing-ownership/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-cmdi-vs-hardcoded-argv/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-deser-yaml-load/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-idor-cross-function/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-jwt-alg-confusion/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-llm05-chained-exec/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-pathtrav-partial-sanitizer/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-sqli-second-order/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-sqli-vs-constant-interp/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-ssrf-allowlist-suffix-bypass/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-ssrf-blocklist-bypass/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/hard-xss-incomplete-sanitizer/: benign_lookalike.py  label.json  target.md  vulnerable_variant.py
evals/corpus/cases/ja-cmdi-01/: benign_lookalike.js  label.json  target.md  vulnerable_variant.js
evals/corpus/cases/ja-cmdi-02/: benign_lookalike.js  label.json  target.md  vulnerable_variant.js
evals/corpus/cases/ja-cmdi-03/: benign_lookalike.js  label.json  target.md  vulnerable_variant.js
evals/corpus/cases/ja-cmdi-04/: benign_lookalike.js  label.json  target.md  (+1 more)
evals/runs/: baseline-findings.json
evals/scripts/: promote_finding.py
evals/tests/: test_baseline_tracks_corpus.py  test_gate_ci.py  test_hard_cases_t129.py  test_keep_or_revert.py  test_labels.py  test_multifile_cases_t129b.py  test_open_redirect_taxonomy.py  test_promote_finding.py  test_score.py
packaging/: conftest.py  pyproject.toml  validate_manifest.py
packaging/tests/: test_identity_carriage.py  test_validate_manifest.py
(+714 files in other folders)
