[project]
name = "white-hacker-evals"
version = "0.1.0"
description = "Eval corpus scorer (TPR/FPR/Youden's J) + label validation for the white-hacker review pipeline."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
