[project]
name = "white-hacker-packaging"
version = "0.1.0"
description = "Stdlib validator enforcing the canonical Claude Code plugin/marketplace layout (manifest structure + placement rule)."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
