[project]
name = "white-hacker-shared-scripts"
version = "0.1.0"
description = "Shared validators for white-hacker findings artifacts (schema validation, dup-id check)."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
