[project]
name = "white-hacker-sec-detect"
version = "0.1.0"
description = "Language/framework/tool detection → SCAN-PLAN.json emitter + schema validator."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
