[project]
name = "sec-kb-refresh-scripts"
version = "0.1.0"
description = "Incremental AI-threat feed poller -> draft KB candidate entries (fixtures only; no network here)."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6"]

[dependency-groups]
dev = ["pytest>=8", "jsonschema>=4.20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
