[project]
name = "sec-patch-scripts"
version = "0.1.0"
description = "Validator for sec-patch PATCH-STATE.json against patch-state-schema.json (ladder tri-state + variants + verdict)."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
