[project]
name = "white-hacker-secrets-scan"
version = "0.1.0"
description = "Redaction + finding construction for the secrets capability — never emits a secret value."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
