[project]
name = "ai-attack-kb-scripts"
version = "0.1.0"
description = "Validator for ai-attack-kb reference entries (YAML front-matter against kb-entry-schema.json + size caps + unique ids)."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20", "pyyaml>=6"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
