[project]
name = "white-hacker-deps-scan"
version = "0.1.0"
description = "Normalize SCA tool output (Trivy/OSV/native gates) into schema-valid findings, behind the SCA capability."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
