[project]
name = "white-hacker-sec-policy"
version = "0.1.0"
description = "Parse an existing SECURITY.md/security.txt structurally as untrusted data and emit a gap report (sections, OpenSSF Scorecard signals, injection screen). Reuses the T-11.2 detector; never echoes file-body spans; never touches the project profile (ADR-018)."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
